2003-02-24  Kevin Breit  <mrproper@ximian.com>

        * en/Gtk/ArrowType.xml: Fixed a tag mismatch error that caused it to break compile.

2003-02-24  Duncan Mak  <duncan@ximian.com>

	* makefile: Make the path generic again, I forgot to revert the
	last patch after Gonzalo checked in a temporary fix to Uri.cs.

2003-02-24  Kevin Breit  <mrproper@ximian.com>

	* en/Gtk/ArrowType.xml: Removed the "To be added" from the remarks sections.

	* en/Gtk/Arrow.xml: Fixed up a few things in the documentation.

2003-02-23  Duncan Mak  <duncan@ximian.com>

	* makefile: the docs target is dangerous, remove it by
	default. Also, remove the -f flag, so even if we do run it, it
	won't overwrite files, by default.

	* en/Gtk/AccelGroup.xml: From Raphael Schmid
	<raphael.schmid@gmx.de>, with edits.

	* en/Gtk/DirectionType.xml: 
	* en/Gtk/SelectionMode.xml: More from Hector.

	* en/*/*.xml: a Big patch. This adds code-generated documentation
	for internal constructors, the GType property and the Finalized method.

2003-02-22  Duncan Mak  <duncan@ximian.com>

	* en/Gtk/MovementStep.xml: 
	* en/Gtk/ResizeMode.xml:
	* en/Gtk/StateType.xml:
	* en/Gtk/ToolbarStyle.xml: More from Hector, the Mexican
	documentation phenomenon!

	* en/Gtk/HSeparator.xml:  Hector Gomez.

	* en/Gtk/DeleteType.xml:  Kevin Breit, with edits.

2003-02-21  Kevin Breit  <mrproper@ximian.com>

	* en/Gtk/Arrow.xml: Fixed a small error where a . was missing at the end of a sentence.

2003-02-21  Duncan Mak  <duncan@ximian.com>

	* en/Gtk/Arrow.xml: Kevin Breit, <mrproper@ximian.com>.

	* en/Gtk/Misc.xml: Raphael J. Schmid, <raphael@arrivingarrow.net>.

	* en/Gtk/CornerType.xml: Kevin Breit, <mrproper@ximian.com>.

	* en/Gtk/AccelLabel.xml: Hector E. Gomez Morales <hgomez_36@flashmail.com>.

	* en/Gtk/AccelFlags.xml: Hector E. Gomez Morales <hgomez_36@flashmail.com>.
	
2003-02-19  Jeffrey Stedfast  <fejj@ximian.com>

	* en/Gdk/GC.xml: Documented.

2003-02-17  Duncan Mak  <duncan@ximian.com>

	* AtkSharp/*.xml: