@@ -1,5 +1,5 @@
 <Type Name="FontSelection" FullName="Gtk.FontSelection">
-  <TypeSignature Language="C#" Value="public class FontSelection : Gtk.VBox, Implementor, IWrapper, IWrapper, IDisposable" Maintainer="auto" />
+  <TypeSignature Language="C#" Value="public class FontSelection : Gtk.VBox, Implementor, IWrapper, IWrapper, IDisposable" Maintainer="Lee Mallabone" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
@@ -7,8 +7,15 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>A FontSelection is a widget that allows the user to select a font.</summary>
+    <remarks>
+    <para>The FontSelection widget lists the available fonts, styles and sizes, allowing the user to select a font. It is used in the <see cref="T:Gtk.FontSelectionDialog"/> widget to provide a <see cref="T:Gtk.Dialog"/> box for selecting fonts.
+    </para>
+    <para>Filters can be used to limit the fonts shown. There are 2 filters in the FontSelection - a base filter and a user filter. The base filter can not be changed by the user, so this can be used when the user must choose from the restricted set of fonts (e.g. for a terminal-type application you may want to force the user to select a fixed-width font).
+    </para>
+    <para>
+    The user filter can be changed or reset by the user, by using the 'Reset Filter' button or changing the options on the 'Filter' page of the widget.
+    </para></remarks>
   </Docs>
   <Base>
     <BaseTypeName>Gtk.VBox</BaseTypeName>
@@ -79,9 +86,9 @@
       <ReturnValue />
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'Gtk.FontSelection'</returns>
-        <remarks>To be added</remarks>
+        <summary>The main way to construct a new FontSelection</summary>
+        <returns></returns>
+        <remarks><para>Creates a new FontSelection widget that allows the user to select from the available fonts.</para></remarks>
       </Docs>
     </Member>
     <Member MemberName="GType">
@@ -106,10 +113,10 @@
         <Parameter Name="value" Type="System.String" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="value">To be added: an object of type 'string'</param>
-        <returns>To be added: an object of type 'string'</returns>
-        <remarks>To be added</remarks>
+        <summary>Manage the name of the font that is selected in this widget.</summary>
+        <param name="value">The name of a system font to select.</param>
+        <returns>The name of the currently selected font.</returns>
+        <remarks><para>If this property is used to alter the widget's font name to a font that could not be found, the widget will retain its original font selection.</para></remarks>
       </Docs>
     </Member>
     <Member MemberName="PreviewText">
@@ -122,10 +129,10 @@
         <Parameter Name="value" Type="System.String" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="value">To be added: an object of type 'string'</param>
-        <returns>To be added: an object of type 'string'</returns>
-        <remarks>To be added</remarks>
+        <summary>The text used to display a preview of the selected font.</summary>
+        <param name="value">Text that should be displayed using the selected font.</param>
+        <returns>The text currently displaying the selected font.</returns>
+        <remarks><para>This property determines the exact string that is displayed in the 'preview area' of the FontSelection.</para></remarks>
       </Docs>
     </Member>
     <Member MemberName="Font">
@@ -135,9 +142,9 @@
         <ReturnType>Gdk.Font</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'Gdk.Font'</returns>
-        <remarks>To be added</remarks>
+        <summary>Get the <see cref="T:Gdk.Font"/> that is currently selected.</summary>
+        <returns>A Gdk font object representing the selected font, or null if no font is selected.</returns>
+        <remarks></remarks>
       </Docs>
     </Member>
   </Members>
