@@ -1,5 +1,5 @@
 <Type Name="FontSelectionDialog" FullName="Gtk.FontSelectionDialog">
-  <TypeSignature Language="C#" Value="public class FontSelectionDialog : Gtk.Dialog, Implementor, IWrapper, IWrapper, IDisposable" Maintainer="auto" />
+  <TypeSignature Language="C#" Value="public class FontSelectionDialog : Gtk.Dialog, Implementor, IWrapper, IWrapper, IDisposable" Maintainer="Lee Mallabone" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
@@ -7,8 +7,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>A FontSelectionDialog is a widget that opens a window requesting the user to select a font</summary>
+    <remarks><para>The FontSelectionDialog widget displays a window listing the available fonts, styles and sizes, allowing the user to select a font. It effectively places a <see cref="T:Gtk.FontSelection"/> widget in a <see cref="T:Gtk.Dialog"/>.</para></remarks>
   </Docs>
   <Base>
     <BaseTypeName>Gtk.Dialog</BaseTypeName>
@@ -39,10 +39,10 @@
         <Parameter Name="fontname" Type="System.String" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="fontname">To be added: an object of type 'string'</param>
-        <returns>To be added: an object of type 'bool'</returns>
-        <remarks>To be added</remarks>
+        <summary>Sets the name of the font that is selected in this widget.</summary>
+        <param name="fontname">The name of a system font to select.</param>
+        <returns><langword name="true"/> if <paramref name="fontname"/> was a valid font, <langword name="false"/> otherwise.</returns>
+        <remarks><para>If this property is used to alter the widget's font name to a font that could not be found, the widget will retain its original font selection.</para></remarks>
       </Docs>
     </Member>
     <Member MemberName="Finalize">
@@ -97,10 +97,10 @@
         <Parameter Name="title" Type="System.String" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="title">To be added: an object of type 'string'</param>
-        <returns>To be added: an object of type 'Gtk.FontSelectionDialog'</returns>
-        <remarks>To be added</remarks>
+        <summary>Create a new FontSelectionDialog</summary>
+        <param name="title">A title that will appear in the window's title bar.</param>
+        <returns>A new FontSelectionDialog</returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName=".ctor">
@@ -109,9 +109,9 @@
       <ReturnValue />
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'Gtk.FontSelectionDialog'</returns>
-        <remarks>To be added</remarks>
+        <summary>Internal constructor. Should not be used.</summary>
+        <returns></returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="GType">
@@ -133,9 +133,9 @@
         <ReturnType>System.String</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'string'</returns>
-        <remarks>To be added</remarks>
+        <summary>The name of the font that is selected in this widget</summary>
+        <returns>The name of the currently selected font.</returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="PreviewText">
@@ -148,10 +148,10 @@
         <Parameter Name="value" Type="System.String" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="value">To be added: an object of type 'string'</param>
-        <returns>To be added: an object of type 'string'</returns>
-        <remarks>To be added</remarks>
+        <summary>The text used to display a preview of the selected font.</summary>
+        <param name="value">Text that should be displayed using the selected font.</param>
+        <returns>The text currently displaying the selected font.</returns>
+        <remarks><para>This property determines the exact string that is displayed in the 'preview area' of the FontSelectionDialog.</para></remarks>
       </Docs>
     </Member>
   </Members>
