@@ -1,3 +1,8 @@
+2003-02-25  Lee Mallabone <mono-docs@fonicmonkey.net>
+
+	* en/Gtk/FontSelection.xml:
+	* en/Gtk/FontSelectionDialog.xml: docs for Font widgets
+
 2003-02-24  Kevin Breit  <mrproper@ximian.com>
 
         * en/Gtk/ArrowType.xml: Fixed a tag mismatch error that caused it to break compile.
